* correction du problème de contraste sur le texte "Agence La Panthère - Agence web basée à Lyon." * suppression des liens superflus positionnés dans le footer * corrections au niveau des liens vers les réseaux sociaux :   ajout d'un attribut "title" pour éviter l'erreur "Empty link";   modification de l'URL "index.html" vers "#" pour éviter les erreurs "Redundant link"; * espacement des élements dans le footer

--- a/css/style.css
+++ b/css/style.css
@@ -1113,3 +1113,32 @@ a[data-lightbox]:hover::before {
 .portfolio-thumb {
     margin-bottom: 0;
 }
+
+footer p.text-center {
+    margin-bottom: 14px;
+	font-size: 1.2em;
+	color: #000 !important;
+	font-weight: 700;
+}
+
+div.social {
+	margin-bottom: 21px;
+}
+
+ul#footer-links {
+    padding: 0;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+}
+ul#footer-links > li {
+    list-style: none;
+}
+ul#footer-links > li:not(:first-child):before {
+    padding: 11px;
+    content: "|";
+    color: #555;
+}
+ul#footer-links > li > a {
+	color: #000 !important;
+}
